--- a/files/etc/smartdns/custom.conf
+++ b/files/etc/smartdns/custom.conf
@@ -17,9 +17,11 @@ speed-check-mode tcp:80,ping
 
 server-tls 223.5.5.5 -host-name dns.alidns.com
 server-tls dns.alidns.com
-server-https https://223.5.5.5/dns-query -host-name dns.alidns.com -http-host dns.alidns.com
+server-tls 162.14.21.178 -host-name doh.pub
+server-tls doh.pub
+server-https https://223.5.5.5/dns-query -host-name dns.alidns.com
 server-https https://dns.alidns.com/dns-query
-server-https https://162.14.21.178/dns-query -host-name doh.pub -http-host doh.pub
+server-https https://162.14.21.178/dns-query -host-name doh.pub
 server-https https://doh.pub/dns-query
 
 server-https https://1.0.0.1/dns-query -group fq_dns -exclude-default-group
