--- a/files/etc/smartdns/custom.conf
+++ b/files/etc/smartdns/custom.conf
@@ -13,7 +13,7 @@
 # List of hosts that supply bogus NX domain results
 # bogus-nxdomain [ip/subnet]
 
-speed-check-mode tcp:80,ping
+force-AAAA-SOA yes
 
 server-tls 223.5.5.5 -host-name dns.alidns.com
 server-tls dns.alidns.com
