--- a/files/etc/smartdns/custom.conf
+++ b/files/etc/smartdns/custom.conf
@@ -13,19 +13,29 @@
 # List of hosts that supply bogus NX domain results
 # bogus-nxdomain [ip/subnet]
 
+# 仅ipv4
 force-AAAA-SOA yes
-server-tls 223.5.5.5 -host-name dns.alidns.com
-server-tls dns.alidns.com
-server-tls 162.14.21.178 -host-name doh.pub
-server-tls doh.pub
-server-https https://223.5.5.5/dns-query -host-name dns.alidns.com
-server-https https://dns.alidns.com/dns-query
-server-https https://162.14.21.178/dns-query -host-name doh.pub
-server-https https://doh.pub/dns-query
 
-server-https https://1.0.0.1/dns-query -group fq_dns -exclude-default-group
+# Bootstrap分组
+server 223.5.5.5 -group bootstrap -exclude-default-group
+server 119.29.29.29 -group bootstrap -exclude-default-group
+server-tcp 8.8.8.8 -group bootstrap1 -exclude-default-group
+server-tcp 1.1.1.1 -group bootstrap1 -exclude-default-group
+
+# 主分组
+server-https https://dns.alidns.com/dns-query
+server-https https://doh.pub/dns-query
+server-https https://rubyfish.cn/dns-query
+server-https https://i.233py.com/dns-query
+nameserver /doh.pub/bootstrap
+nameserver /dns.alidns.com/bootstrap
+nameserver /rubyfish.cn/bootstrap
+nameserver /i.233py.com/bootstrap
+
+# 代理组
 server-https https://cloudflare-dns.com/dns-query -group fq_dns -exclude-default-group
-server-https https://8.8.8.8/dns-query -group fq_dns -exclude-default-group
 server-https https://dns.google/dns-query -group fq_dns -exclude-default-group
-server-https https://9.9.9.9/dns-query -group fq_dns -exclude-default-group
 server-https https://dns.quad9.net/dns-query -group fq_dns -exclude-default-group
+nameserver /cloudflare-dns.com/bootstrap1
+nameserver /dns.google/bootstrap1
+nameserver /dns.quad9.net/bootstrap1
