--- a/.github/workflows/armv8-immortalwrt.yml
+++ b/.github/workflows/armv8-immortalwrt.yml
@@ -29,7 +29,7 @@ env:
   DIY_SH: scripts/immortalwrt-armv8.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
-  UPLOAD_COWTRANSFER: true
+  UPLOAD_COWTRANSFER: false
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
