--- a/files/etc/smartdns/custom.conf
+++ b/files/etc/smartdns/custom.conf
@@ -17,12 +17,13 @@
 force-AAAA-SOA yes
 
 # Bootstrap分组
-server 223.5.5.5 -group bootstrap -exclude-default-group
 server 119.29.29.29 -group bootstrap -exclude-default-group
-server-tcp 8.8.8.8 -group bootstrap1 -exclude-default-group
 server-tcp 1.1.1.1 -group bootstrap1 -exclude-default-group
 
 # 主分组
+server-tls doh.pub
+server-tls dns.alidns.com
+server-tls rubyfish.cn
 server-https https://dns.alidns.com/dns-query
 server-https https://doh.pub/dns-query
 server-https https://rubyfish.cn/dns-query
