--- a/configs/r619ac-immortalwrt.config
+++ b/configs/r619ac-immortalwrt.config
@@ -42,13 +42,11 @@ CONFIG_PACKAGE_libmaxminddb=y
 # CONFIG_PACKAGE_libminiupnpc is not set
 # CONFIG_PACKAGE_libnatpmp is not set
 CONFIG_PACKAGE_libopenldap=y
-CONFIG_PACKAGE_libpcre2=y
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libruby=y
 CONFIG_PACKAGE_libsasl2=y
 CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libyaml=y
-CONFIG_PACKAGE_libyaml-cpp=y
 CONFIG_PACKAGE_lua-maxminddb=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
@@ -62,12 +60,12 @@ CONFIG_PACKAGE_luci-app-dnsfilter=y
 CONFIG_PACKAGE_luci-app-godproxy=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-vlmcsd is not set
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Server is not set
 # CONFIG_PACKAGE_luci-app-wol is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 CONFIG_PACKAGE_luci-compat=y
@@ -91,13 +89,10 @@ CONFIG_PACKAGE_ruby-stringio=y
 CONFIG_PACKAGE_ruby-strscan=y
 CONFIG_PACKAGE_ruby-yaml=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
-CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-check is not set
 CONFIG_PACKAGE_simple-obfs-server=y
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_smartdns-le=y
-CONFIG_PACKAGE_sub-web=y
-CONFIG_PACKAGE_subconverter=y
 # CONFIG_PACKAGE_trojan is not set
 CONFIG_PACKAGE_trojan-go=y
 CONFIG_PACKAGE_trojan-plus=y
@@ -110,5 +105,4 @@ CONFIG_PACKAGE_v2ray-plugin=y
 CONFIG_PACKAGE_xray-geodata=y
 # CONFIG_PACKAGE_zerotier is not set
 CONFIG_PACKAGE_zsh=y
-CONFIG_PCRE2_JIT_ENABLED=y
 CONFIG_TROJAN_GO_COMPRESS_UPX=y
